web/css/style.css
/*GENERALITES*/

body{
    font-family: "Open Sans", Arial;
    background-color: #ededed;
}

.fond-vert {
    background-color: #00A468;
}

.body {
    margin-top: 208px;
}

/*HEADER*/

header {
    position:fixed;
    left:0;
    right:0;
    margin:auto;
}


.entete {
    border: 0 none;
    font: inherit;
    margin: 0;
    vertical-align: baseline;
    height : 105px;
}

.logo {
    border: 0 none;
    font: inherit;
    margin: 0;
    padding: 0;
    vertical-align: baseline;
}

.logo a {
    background: rgba(0, 0, 0, 0) url("../images/logo1.png") no-repeat scroll 0 0;
    float: left;
    height: 60px;
    width: 25%;
}

a {
    text-decoration: none;
}

.logo a img {
    width: 360px;
    height : auto;
    width: auto\9; /* ie8 */

}

.recherche {
    background: #ffffff none repeat scroll 0 0;
    box-shadow: 0 -1px 2px 0 rgba(201, 201, 201, 1) inset;
    margin-top : 55px;
}

.recherche form {
    width: 100%;
}

.recherche input[type="submit"] {
    background: rgba(0, 0, 0, 0) url("../images/oiseau_recherche.png") no-repeat scroll;
    border: medium none;
    cursor: pointer;
    height: 40px;
    width: 40px;
    line-height: 1.5em;
    outline: medium none;
    padding: 12px 0;
    position: absolute;
    right: 0;
}

.recherche input[type="text"] {
    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
    border: medium none;
    color: #c4c4c4;
    font-size: 13px;
    font-weight: 600;
    outline: medium none;
    padding: 12px 16px;
    position: relative;
    width: 80%;
}



/*NAV*/

nav {
    margin-top : 10px;
}

.menu_box_list {
    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #ffffff 0%, #fefefe 10%, #fdfdfd 22%, #f0f0f0 41%, #e9e9e9 63%, #e7e7e7 82%, #e5e5e5 100%) repeat scroll 0 0;
    box-shadow: 0 5px 5px 0 rgba(10, 10, 10, 1);
    width : 50%;
    min-width: 315px;
    margin-left : auto;
    margin-right : auto;
    margin-bottom : -7px;
}

.menu_box_list ul {
    padding-left :0;
    margin-right: -10px;
}

.menu_box_list li {
    border-left: 1px solid rgb(190, 190, 190);
    height: 100px;
    width: 32.55%;
    min-width: 105px;
    display: inline-block;
    margin-right: -4px;
}

.menu_box_list li:last-child {
    margin-right: 0;
}

.menu_box_list li.bouton_menu {
    border-bottom: 8px solid #f1ec75;
    transition: all .1s ease-in-out;
}

.menu_box_list li.bouton_menu:hover {
    border-bottom: 16px solid #FFE202;
    background-color: #ffffff;
    transform: scale(1.1);
    z-index:1;
}

.menu_box_list li.bouton_menu:hover .icon_observer {
    background: url("../images/pictogramme_hover.png") no-repeat 0 0;
}
.menu_box_list li.bouton_menu:hover .icon_rechercher {
    background: url("../images/loupe_hover.png") no-repeat 0 0;
}
.menu_box_list li.bouton_menu:hover .icon_naturalistes {
    background: url("../images/naturaliste_hover.png") no-repeat 0 0;
}

.menu_box_list li a {
    color: #90C840;
    display: inline-block;
    /* font-family: "";*/
    font-size: 1.1em;
    padding: 14px 0;
    text-align: center;
    text-transform: capitalize;
    width: 100%;
}

.menu_box_list li a:hover {
    color: #00A468;
    text-decoration: none;
}

.menu_box_list li a > i {
    display: inline-block;
    height: 32px;
    margin: 0 auto;
    transition: none 0s ease 0s ;
    vertical-align: middle;
    width: 30px;
}

.icon_rechercher {
    background: url("../images/loupe.png") no-repeat 0 0;
}
.icon_observer {
    background: url("../images/pictogramme.png") no-repeat 0 0;
}
.icon_naturalistes {
    background: url("../images/naturaliste.png") no-repeat 0 0;
}

.menu_box_list li a span {
    display: block;
    padding: 10px;
}

.wrap {
    width: 80%;
    margin: 0 auto;
}



/*FOOTER*/

footer .logo {
    height: 120px;
    margin-left : -50px;
}

footer p {
    color : #90C840;
    font-size : 0.8em;
    text-align: justify;
}

ol, ul {
    list-style: outside none none;
    margin: 0;
    padding: 0;
}

.footer_right {
    margin-top : 70px;
}

.footer_nav {
    color : #90C840;
}

.footer_nav li, .footer_rs li {
    display: inline-block;
}

.footer_nav li a {
    margin: 0 10px;
    padding-bottom: 15px;
}
.footer_nav li a, .footer_rs li a {
    color: #90C840;
    display: block;
    font-size: 0.8em;
    transition: all 0.9s ease 0s;
}
.footer_rs {
    margin-top: 2%;
}
.footer_rs li a {
    padding: 14px 10px;
    transition: all 0.5s linear 0s;
}

.footer_nav li a:hover, .footer_rs li a:hover {
    color : #00A468;
    text-decoration: none;
}

.footer_rs li a > i.iconTwitter {
    background-position: 0 0;
}
.footer_rs li a > i {
    display: inline-block;
    height: 18px;
    margin: 0 auto;
    transition: none 0s ease 0s ;
    vertical-align: middle;
    width: 20px;
}
.iconTwitter {
    background: url("../images/twitter.png") no-repeat 0 0;
}
.iconFacebook {
    background: url("../images/facebook.png") no-repeat 0 0;
}
.iconMail {
    background: url("../images/mail.png") no-repeat 0 0;
}



/*REPONSIVE */

@media (max-width: 768px) {
    .container {
        padding : 0;
    }
    header {
        padding : 0;
    }
    header .container {
        width: 100%;
    }
    .footer_right {
        margin-top : 10px;
    }
}

